[project]
name = "saturn"
version = "0.1.0"
description = "Saturn — Autonomous coding agent that monitors Zoho Cliq channels and solves issues end-to-end via Claude Opus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "openai>=1.30.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-gitlab>=5.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "gitpython>=3.1.0",
]

[project.scripts]
saturn = "main:main"

[tool.setuptools.packages.find]
include = ["agent*", "server*", "dispatcher*", "tools*", "integrations*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

